# umadev

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  README.zh-TW.md  README_EN.md
.claude/: CLAUDE.md  settings.json
.codex/: hooks.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml  umadev-governance.yml  website-pages.yml
crates/umadev/: Cargo.toml
crates/umadev-agent/: Cargo.toml
crates/umadev-contract/: Cargo.toml
crates/umadev-contract/src/: backend.rs  derive.rs  extract.rs  lib.rs  parse.rs  render.rs  validate.rs
crates/umadev-contract/tests/: contract.rs
crates/umadev-governance/: Cargo.toml
crates/umadev-host/: Cargo.toml
crates/umadev-host/src/: acp.rs  claude.rs  claude_session.rs  codex.rs  codex_session.rs  kimi_contract.rs  lib.rs  opencode.rs  opencode_session.rs  process_logs.rs  stderr_tail.rs
crates/umadev-i18n/: Cargo.toml
crates/umadev-i18n/catalog/: en.toml  zh-CN.toml  zh-TW.toml
crates/umadev-i18n/src/: lib.rs
crates/umadev-knowledge/: Cargo.toml
crates/umadev-process/: Cargo.toml
crates/umadev-runtime/: Cargo.toml
crates/umadev-runtime/src/: lib.rs
crates/umadev-spec/: Cargo.toml
crates/umadev-spec/src/: lib.rs
crates/umadev-tui/: Cargo.toml
crates/umadev-tui/src/: app.rs  apple_terminal_theme.rs  base_config.rs  config.rs  lib.rs  lib_tests.rs  link.rs  selection.rs  ui.rs
crates/umadev-tui/src/app/: backend.rs  frozen_plan.rs  tests.rs  usage_meter.rs
crates/umadev-tui/src/execution_postcondition/git_commit/: index.rs
crates/umadev-tui/src/input/: decode.rs  mod.rs  reader.rs  tokenize.rs
crates/umadev-tui/src/tests/: resident_chat_terminal_tests.rs
docs/: AGENT_TEAM_INTERACTION_DESIGN.md  AGENT_WIELDS_BASE_ARCHITECTURE.md  ARCHITECTURE.md  PRODUCT_VISION_AND_ROADMAP.md  SELF_LEARNING_PITFALL_KB.md  USER_GUIDE.md  UX_MATURITY_ROADMAP.md
docs/plans/: 2026-06-13-enterprise-enhancement.md
knowledge/: high-quality-engineering-playbook.md
knowledge/00-governance/: governance-capabilities.md  knowledge-map.md  maintenance-policy.md  review-checklist.md
knowledge/ai/: agent-evaluation-benchmark.md  ai-agent-memory-context-management.md  ai-cost-capacity-optimization-playbook.md  ai-data-security-and-compliance-playbook.md  ai-domain-index-and-checklist.md  ai-governance-maturity-model.md  ai-model-selection-and-routing-strategy.md  ai-observability-and-oncall-runbook.md  ai-rag-engineering-playbook.md  ai-red-team-and-safety-evaluation.md  ai-release-readiness-and-rollback-gate.md  llm-agent-engineering-deep-dive.md  prompt-and-tool-guardrails.md
knowledge/architecture/: adr-template-and-examples.md  api-gateway-deep-dive.md  configuration-management.md  distributed-transactions.md  microservices-complete.md  resilience-and-disaster-patterns.md  service-governance.md  system-architecture-deep-dive.md
knowledge/cicd/: cicd-blueprint-deep-dive.md  release-readiness-gate.md
knowledge/data/: data-governance-and-modeling-deep-dive.md
knowledge/design/: ui-full-lifecycle-cross-platform-playbook.md  ux-system-deep-dive.md
knowledge/design-systems/: 00-craft-rules.md  aesthetic-families.md  anti-ai-slop.md  bold-geometric.md  brutalist-bold.md  editorial-clean.md  glass-aurora.md  modern-minimal.md  premium-luxury.md  product-type-design-map.md  soft-warm.md  tech-utility.md
knowledge/development/: api-contract-and-versioning-guide.md  api-governance-complete.md  backend-engineering-complete.md  code-review-quality-complete.md  concurrency-reliability-complete.md  database-engineering-complete.md  engineering-effectiveness-complete.md  engineering-standards-deep-dive.md  frontend-engineering-complete.md  performance-capacity-complete.md  refactor-migration-complete.md  refactoring-and-techdebt-playbook.md  security-in-development-complete.md
knowledge/incident/: postmortem-and-response-deep-dive.md
knowledge/operations/: aiops-anomaly-detection.md  capacity-planning.md  chaos-engineering.md  incident-command-system.md  observability-complete.md  slo-sli-playbook.md  sre-operations-deep-dive.md
knowledge/product/: feature-prioritization-framework.md  kpi-and-metric-tree.md  product-discovery-and-prd-deep-dive.md
knowledge/security/: compliance-automation.md  container-security.md  devsecops-complete.md  sast-dast-sca.md  secrets-management.md  security-architecture-deep-dive.md  threat-modeling-stride-playbook.md
knowledge/seed-templates/: auth-system.md  blog-content.md  dashboard.md  docs-site.md  e-commerce.md  saas-landing.md  settings-page.md
knowledge/testing/: risk-based-test-matrix.md  testing-strategy-deep-dive.md
npm/: README.md
npm/cli-darwin-arm64/: package.json
npm/cli-darwin-x64/: package.json
npm/cli-linux-arm64/: package.json
npm/cli-linux-x64/: package.json
npm/cli-win32-x64/: package.json
npm/knowledge-corpus/: .gitignore  README.md  package.json
npm/model-e5-small/: .gitignore  README.md  package.json
npm/scripts/: publish.sh  quantize-model.py  smoke.sh  stage.sh
npm/umadev/: README.md  package.json
spec/: UMADEV_HOST_SPEC_V1.md
umadev-website/: package-lock.json  package.json
(+446 files in other folders)
