[package]
name = "umadev-spec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "UMADEV_HOST_SPEC_V1 — machine-readable form of the UmaDev specification."

[dependencies]
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
