[package]
name = "umadev-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "UmaDev TUI — a ratatui terminal app that drives the pipeline and renders live progress."

[dependencies]
umadev-agent = { workspace = true }
umadev-host = { workspace = true }
umadev-runtime = { workspace = true }
umadev-spec = { workspace = true }
umadev-i18n = { workspace = true }

ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3"
async-trait = { workspace = true }
