[package]
name = "umadev-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "UmaDev TUI — a ratatui terminal app that drives the pipeline and renders live progress."

[dependencies]
umadev-agent = { workspace = true }
umadev-host = { workspace = true }
umadev-runtime = { workspace = true }
umadev-spec = { workspace = true }
umadev-i18n = { workspace = true }

ratatui = { workspace = true }
crossterm = { workspace = true }
unicode-width = { workspace = true }
# CommonMark pull parser — a pure-Rust, dependency-light event stream (no ICU,
# no heavy parse tree). We compile the LIBRARY only (`default-features = false`
# drops the `getopts`-backed `pulldown-cmark` binary) and feed its events into a
# ratatui Line/Span compiler. The dependency-light constraint only binds the
# spec / governance / contract crates, not the TUI.
pulldown-cmark = { version = "0.13", default-features = false }
tokio = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3"
async-trait = { workspace = true }
